--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = "1.4.31"
+        room_version = '2.4.0'
+        nav_version = "2.3.5"
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
